Closed Bug 1725032 Opened 4 years ago Closed 4 years ago

[10.13] After ff91 upgrade, if 'increase contrast' ist checked on mac os, all dialogs have a transparent background, no matter what is set under settings>general>color

Categories

(Core :: Widget: Cocoa, defect, P2)

Firefox 91
All
macOS
defect

Tracking

()

VERIFIED FIXED
93 Branch
Accessibility Severity s2
Tracking Status
firefox-esr78 --- unaffected
firefox-esr91 --- verified
firefox91 + wontfix
firefox92 + verified
firefox93 + verified

People

(Reporter: info, Assigned: mstange)

References

(Regression)

Details

(Keywords: access, regression, Whiteboard: [mac:integration])

Attachments

(2 files)

User Agent: Mozilla/5.0 (Macintosh; Intel Mac OS X 10_13_6) AppleWebKit/605.1.15 (KHTML, like Gecko) iCab/5.9.2 Safari/604.5.6

Steps to reproduce:

upgraded to ff91 on mac os 10.13. In os accessibility prefs, 'increase contrast' is checked.

Actual results:

All dialogs (including modal dialogs on the settings page, print dialog and any javascript alert on any page) have a transparent background and are therefore unreadable. Tried all options under settings->general->color (always, never, only high contrast) to no avail. Checked with light and dark mode. Color scheme changes, but dialog backgrounds are always transparent, unless I uncheck the os increase contrast setting.

Expected results:

dialogs should be readable with a opaque background.

The Bugbug bot thinks this bug should belong to the 'Core::Widget: Cocoa' component, and is moving the bug to that component. Please revert this change in case you think the bot is wrong.

Component: Untriaged → Widget: Cocoa
Product: Firefox → Core
Status: UNCONFIRMED → NEW
Ever confirmed: true
Keywords: regression
OS: Unspecified → macOS
Regressed by: 1719734
Hardware: Unspecified → All
Has Regression Range: --- → yes
Flags: needinfo?(htwyford)
Whiteboard: [access-s2]
See Also: → 1725811
See Also: → 1724503

This workaround dosen't apply to this problem as already stated in my original post. It will only turn off high contrast mode and restore the intended colors on web pages, all dialogs will remain transparent though, no matter what options you set under settings->general->color.

That's right - what comment 2 refers to is bug 1725341.

This bug about transparent dialog backgrounds is not an intentional change and will be fixed.

Severity: -- → S2
Priority: -- → P2
Whiteboard: [access-s2] → [access-s2][mac:integration]

Bug 1726606 disables high contrast mode by default, even with mac "increase contrast", so marking this as wontfix for 91.

(In reply to Julien Cristau [:jcristau] from comment #6)

Bug 1726606 disables high contrast mode by default, even with mac "increase contrast", so marking this as wontfix for 91.

Hello Julien! Bug 1726606 should also fix this bug as well? Because I can still see the issue reproducing with the latest nightly and 92.0b7 if Increase Contrast is enabled on macOS 10.13.

Flags: needinfo?(jcristau)

My bad, I guess this is unrelated.

Flags: needinfo?(jcristau)
Assignee: nobody → mstange.moz
Status: NEW → ASSIGNED
Summary: After ff91 upgrade, if 'increase contrast' ist checked on mac os, all dialogs have a transparent background, no matter what is set under settings>general>color → [10.13] After ff91 upgrade, if 'increase contrast' ist checked on mac os, all dialogs have a transparent background, no matter what is set under settings>general>color
Flags: needinfo?(htwyford)

Please nominate this for Beta approval ASAP so we can include the fix in our final beta build of the cycle on Thursday.

Flags: needinfo?(mstange.moz)
Pushed by mstange@themasta.com: https://hg.mozilla.org/integration/autoland/rev/2b1100b49d6e Override transparent Window system color on 10.13 with a light gray. r=harry
Status: ASSIGNED → RESOLVED
Closed: 4 years ago
Resolution: --- → FIXED
Target Milestone: --- → 93 Branch

Comment on attachment 9237967 [details]
Bug 1725032 - Override transparent Window system color on 10.13 with a light gray. r=harry

Beta/Release Uplift Approval Request

  • User impact if declined: For users on macOS 10.13 with the "Increase Contrast" system setting, some dialogs are unintentionally translucent and hard to read.
  • Is this code covered by automated tests?: Yes
  • Has the fix been verified in Nightly?: No
  • Needs manual test from QE?: Yes
  • If yes, steps to reproduce:
  • List of other uplifts needed: None
  • Risk to taking this patch: Low
  • Why is the change risky/not risky? (and alternatives if risky): Extremely low, just hard-codes one system color to a known-good value.
  • String changes made/needed:
Flags: needinfo?(mstange.moz)
Attachment #9237967 - Flags: approval-mozilla-release?
Attachment #9237967 - Flags: approval-mozilla-beta?
Flags: qe-verify+
QA Whiteboard: [qa-triaged]

Verified fixed with treeherder build from comment 12, Firefox 93.0a1 (20210826031555) on macOS 10.13 and 10.12 while Increase Contrast is enabled. The windows inside about:preferences and modal windows are now displayed as expected.

Comment on attachment 9237967 [details]
Bug 1725032 - Override transparent Window system color on 10.13 with a light gray. r=harry

Approved for 92.0b9.

Attachment #9237967 - Flags: approval-mozilla-beta? → approval-mozilla-beta+
Attachment #9237967 - Flags: approval-mozilla-esr91?

Verified fixed with 92.0b9 (20210826192006) on macOS 10.12 and macOS 10.13 with Increase Contrast.

Comment on attachment 9237967 [details]
Bug 1725032 - Override transparent Window system color on 10.13 with a light gray. r=harry

We're building the Fx92 RC today.

Attachment #9237967 - Flags: approval-mozilla-release? → approval-mozilla-release-

Comment on attachment 9237967 [details]
Bug 1725032 - Override transparent Window system color on 10.13 with a light gray. r=harry

Approved for 91.1esr.

Attachment #9237967 - Flags: approval-mozilla-esr91? → approval-mozilla-esr91+

Verified fixed with 91.1.0esr (20210728021153) on macOS 10.13 and 10.12 while Increase Contrast is active.

Status: RESOLVED → VERIFIED
Flags: qe-verify+
Accessibility Severity: --- → s2
Whiteboard: [access-s2][mac:integration] → [mac:integration]
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Creator:
Created:
Updated:
Size: