Bug 1725032 - Override transparent Window system color on 10.13 with a light gray. r=harry, a=RyanVM

Differential Revision: https://phabricator.services.mozilla.com/D123631